--- a/topics/proteomics/metadata.yaml
+++ b/topics/proteomics/metadata.yaml
@@ -41,7 +41,7 @@ subtopics:
     title: "Metaproteomics analysis of clinical data"
     description: "These tutorials are step by step analysis from database generation to the discovery of peptides to verification, quantitation, and interpretation of the results."
   - id: neoantigen
-    title: "Prediction of potential neoantigens"
+    title: "Neoantigen discovery using the iPepGen pipeline"
     description: "These tutorials outline the identification, prediction, and validation of potential neoantigens."
     
 references:
